# llog

./: CMakeLists.txt  Makefile
src/: CMakeLists.txt  Makefile  llog.c  llog.h
test/: CMakeLists.txt  Makefile  llogmain.c
