SET(LIB_SRC llog.c)
ADD_LIBRARY(${PROJECT_NAME} SHARED ${LIB_SRC})
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET_TARGET_PROPERTIES(libllog PROPERTIES OUTPUT_NAME llog)
INSTALL(TARGETS libllog
      LIBRARY DESTINATION lib
      ARCHIVE DESTINATION lib)
INSTALL(FILES llog.h DESTINATION build)
